# way_finding

./: .env.example  .gitignore  Makefile  README.md  backend.dockerfile  celeryworker.dockerfile  docker-compose.dev.yml  docker-compose.yml  gunicorn_conf.py  rocketryscheduler.dockerfile  start-server.sh
app/: README.md  initial_data.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 043a8a745f8e_switch_to_using_the_sqlalchemy_v2_.py  07ea1a401dc0_log_user_id.py  290c4039b962_.py  2afc1cec1e34_initial.py  3df657518309_add_vertex_and_edge.py  41b0d43c6d3f_create_vertices_table.py  4747a32d83a2_initial.py  5d05055a46a3_update_requestlogs_table_remove_the_.py  83aa7d9a2ec8_description_of_the_change.py  92fab1095a4d_.py  94d11a46f47f_add.py  afa5805eb617_.py  b8300b9777bb_added_account_table.py  da38f1cb6255_.py  df2350c049e9_add_processing_time_and_tracker_id.py
app/app/: exceptions.py  main.py
app/app/api/: deps.py
app/app/celery/: celeryworker_pre_start.py
app/app/core/: celery_app.py  config.py  security.py
app/app/crud/: __init__.py  base.py  crud_edge.py  crud_request_log.py  crud_user.py  crud_vertex.py  crud_ws_request_log.py
app/app/db/: __init__.py  base_class.py  init_db.py  parser.py  session.py
app/app/log/: log.py
app/app/models/: Bot.py  __init__.py  edge.py  request_log.py  user.py  vertex.py  ws_request_log.py
app/app/schemas/: __init__.py  edge.py  health.py  request_log.py  token.py  user.py  vertex.py  (+1 more)
app/cache/: cache-doc.md  cache.py  client.py  redis.py  util.py
app/migrations/: env.py
app/tests/: conftest.py
(+41 files in other folders)
