[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kamran Abdi <kamranabdicse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
gunicorn = "^21.2.0"
pydantic = {extras = ["dotenv", "email"], version = "^2.4.2"}
psycopg2-binary = "^2.9.5"
alembic = "^1.9.1"
SQLAlchemy = "^2.0.22"
celery = "^5.2.7"
fastapi = "^0.104.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
persiantools = "^3.0.1"
python-multipart = "^0.0.6"
tenacity = "^8.1.0"
rocketry = "^2.5.1"
fakeredis = "^2.10.0"
redis = "^5.0.1"
asyncpg = "^0.28.0"
flake8 = "^6.0.0"
black = "^23.3.0"
httpx = "^0.25.0"
jdatetime = "^4.1.1"
pandas = "^2.0.0"
requests = "^2.28.2"
pydantic-settings = "^2.0.3"
pydantic-core = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest="*"
black="*"
ruff="*"
isort="*"

[tool.black]
line-length = 88
exclude = '''
(
  .*versions/*
)
'''

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
]
exclude = ["versions"]
unfixable = ["E712", "B010"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"app/db/base.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["pydantic"]

[tool.isort]
profile = "black"
skip = ["versions"]
